--- a/documents/rapport/rapport/annexe/usage.tex
+++ b/documents/rapport/rapport/annexe/usage.tex
@@ -1,13 +1,15 @@
 \section*{Usage}
 
 \begin{center}
+\lstset{language=sh}
 \begin{lstlisting}[basicstyle=\small]
 
 ./PlanetRenderer <NOISE> --<noise-option>=<value> --<option>
 
 option:
-	 -h  --help      show this page.
-
+	 -h  --help         show this page.
+ 	     --fullscreen   start program in fullscreen.
+ 	
 <NOISE> --<noise-option>=<value>
 Order of option does not matter.
 
