--- a/documents/rapport/rapport/intro.tex
+++ b/documents/rapport/rapport/intro.tex
@@ -2,22 +2,22 @@
   \addcontentsline{toc}{chapter}{Introduction}
   \setcounter{chapter}{0}
   
-  La génération de terrain et son rendu sont des exigences majeur dans diverses applications telles que les simulations et les jeux vidéo, dont les performances sont cruciales.
+  La génération de terrains et son rendu sont des exigences majeures dans diverses applications telles que les simulations et les jeux vidéo, dont les performances sont cruciales.
   
-  Une des manières les plus utilisées pour générer et afficher un terrain, est d'utiliser une \emph{heightmap} (carte de hauteur) qui est une image pouvant être générée à l'aide d'algorithme, et utilisée pour appliquer du relief au terrain(explication plus détaillée dans la section \ref{sec:heightmap}).
+  Une des manières les plus utilisées pour générer et afficher un terrain, est d'utiliser une \emph{heightmap} (carte de hauteur) qui est une image pouvant être générée à l'aide d'algorithmes, et utilisée pour appliquer du relief au terrain(explication plus détaillée dans la section \ref{sec:heightmap}).
   
   La façon la plus simple par la suite pour former le terrain à partir de la \emph{heightmap} est la méthode brute-force, dans laquelle chaque sommet correspond à un pixel de la texture et est relié à ses sommets voisins formant ainsi le \emph{maillage} du terrain.
   
-  Dans le cas d'objets de grandes tailles comme un terrain, une partie de
+  Dans le cas d'objets de grande taille comme un terrain, une partie de
   ses triangles sont éloignés de l'observateur. Il est alors inutile d'en
   afficher tous les détails, ceux-ci étant difficilement visibles. On peut
   donc réduire le nombre de triangles utilisés pour décrire la partie
   éloignée du terrain, réduisant le temps de calcul nécessaire pour
   l'afficher. Ce gain de temps est très important lorsqu'il s'agit de
-  faire un rendu en temps interactif, c'est à dire de générer entre 30 et
+  faire un rendu en temps interactif, c'est-à-dire de générer entre 30 et
   60 images par seconde.
   
-  L'objectif est donc d'implémenter un système de \emph{LOD} (niveaux de détails) à appliquer au \emph{maillage} du terrain. La méthode choisie pour répondre à cette demande est celle du \emph{CDLOD} (Continuous Distance-Dependent Level of Detail for Rendering Heightmap) de Filip Strugar~\cite{CDLOD}. La méthode se sert d'une \emph{heightmap} et se base sur la distance entre la caméra et le terrain, ainsi que le champ de visions pour la sélection et l'affichage des niveaux de détails du terrain nécessaire.
+  L'objectif est donc d'implémenter un système de \emph{LOD} (niveaux de détails) à appliquer au \emph{maillage} du terrain. La méthode choisie pour répondre à cette demande est celle du \emph{CDLOD} (Continuous Distance-Dependent Level of Detail for Rendering Heightmap) de Filip Strugar~\cite{CDLOD}. La méthode se sert d'une \emph{heightmap} et se base sur la distance entre la caméra et le terrain, ainsi que le champ de vision pour la sélection et l'affichage des niveaux de détails du terrain nécessaire.
   
-  Une des difficultés de ce projet repose sur l'application d'une telle méthode à un terrain sphérique, afin de pouvoir lui donnée l'aspect d'une planète, ce qui est peux vite devenir beaucoup plus complexe qu'un terrain plat exempté de bordure.
+  Une des difficultés de ce projet repose sur l'application d'une telle méthode à un terrain sphérique, afin de pouvoir lui donner l'aspect d'une planète, ce qui est peut vite devenir beaucoup plus complexe qu'un terrain plat exempté de bordure.
   
