--- a/documents/rapport/rapport/main.tex
+++ b/documents/rapport/rapport/main.tex
@@ -115,11 +115,12 @@
 
 
 
-\newpage
-\input{tests.tex}
+  \newpage
+  \input{tests.tex}
   
   
-  
+  \newpage
+  \input{futur.tex}
   
   
   %-----------------------------------------------------------------%
@@ -133,7 +134,7 @@
   
   
   %-----------------------------------------------------------------%
-  %   Conclusion
+  %   Annexe
   %-----------------------------------------------------------------%
   
   \newpage
@@ -145,7 +146,13 @@
   %   END
   %-----------------------------------------------------------------%
   
+  \clearpage
+
+  \phantomsection
+
+  \addcontentsline{toc}{chapter}{Bibliographie}
   \bibliography{biblio}{}
   \bibliographystyle{plain}
+    
   
   \end{document}
