--- a/documents/rapport/rapport/abstract.tex
+++ b/documents/rapport/rapport/abstract.tex
@@ -8,11 +8,11 @@ Ce projet a été réalisé dans le cadre du cours de Projet de Programmation, d
 
 Le sujet proposé par notre client Emmanuel Fleury est de générer un terrain sphérique similaire à une planète de manière procédurale pour ensuite l'afficher à l'écran. 
 
-La méthode de génération de terrain utilisée sur demande du client est CDLOD (Continous Distance-Dependent Level Of Detail) implémenté par Filip Strugar~\cite{CDLOD}, qui est un algorithme reposant sur la distance entre la camèra et le terrain pour l'affichage des détails de la sphère.\\
+La méthode de génération de terrains utilisée sur demande du client est CDLOD (Continous Distance-Dependent Level Of Detail) implémenté par Filip Strugar~\cite{CDLOD}, qui est un algorithme reposant sur la distance entre la caméra et le terrain pour l'affichage des détails de la sphère.\\
 
-Lors de ce projet de programmation, nous avons repris une implémentation de la génération d'une sphère par Robert Lindner\footnote{\url{https://github.com/Illation/PlanetRenderer}, dernier accès:Mars 2018} (version reprise en Février 2018 et sous licence MIT) appliquant la méthode CDLOD.
+Lors de ce projet de programmation, nous avons repris une implémentation de la génération d'une sphère par Robert Lindner\footnote{\url{https://github.com/Illation/PlanetRenderer}, dernier accès: avril 2018} (version reprise en février 2018 et sous licence MIT) appliquant la méthode CDLOD.
 
-Nous avons donc par la suite dû analyser et nettoyer une partie du code, qui ne correspondait pas au exigence du projet, et ajouter une méthode de génération procédurale de terrain, permettant donner du relief à la sphère lui donnant ainsi l'aspect d'une planète. 
+Nous avons donc par la suite dû analyser et nettoyer une partie du code, qui ne correspondait pas aux exigences du projet, et ajouter une méthode de génération procédurale de terrain, permettant donner du relief à la sphère lui donnant ainsi l'aspect d'une planète. 
 
 {\Large
 \begin{center}
@@ -24,7 +24,7 @@ This project was executed for the class of "Projet de Programmation" in Master 1
 
 The subject proposed by our customer Emmanuel Fleury is to generate a spherical terrain similar to a planet in a procedural way, and display it on a screen.
 
-The method used on demand of the customer is CDLOD (Continous Distance-Dependent Level Of Detail) implemented by Filip Strugar~\cite{CDLOD}. It is an algorithm which rest on the distance between the camera and the terrain for displaying the details of the sphere.\\
+The method used by demand of the customer is CDLOD (Continous Distance-Dependent Level Of Detail) implemented by Filip Strugar~\cite{CDLOD}. It is an algorithm which rests on the distance between the camera and the terrain for displaying the details of the sphere.\\
 
 During the programming project,we took over an implementation of the generation of the sphere by Robert Lindner\footnote{\url{https://github.com/Illation/PlanetRenderer}, last accessed: March 2018} (version taken in February and under MIT License) which applies the method CDLOD.
 Afterwards we had to analyse and clean a part of the code which didn't correspond to the standards of the project. We had to add a method of procedural terrain generation, allowing to give relief to the sphere, giving it a planet aspect.
