--- a/documents/rapport/rapport/archi.tex
+++ b/documents/rapport/rapport/archi.tex
@@ -9,20 +9,20 @@
   
   \section{Carte de hauteur}
   
-  Le programme utilise un quadtree pour générer les différents niveaux de détail. 
+  Le programme utilise un \emph{quadtree} pour générer les différents niveaux de détail. 
   Ensuite une nouvelle hauteur est appliquée à ce point pour le déplacer. 
-  Cependant, le quadtree ne stocke pas la hauteur du sommet. Cette dernière
-  est enregistré dans un une texture 2d et envoyé à la carte graphique. 
+  Cependant, le \emph{quadtree} ne stocke pas la hauteur du sommet. Cette dernière
+  est enregistrée dans une texture 2d et est envoyé à la carte graphique. 
   Chaque pixel de la texture représente donc une valeur codée sur un nombre flottant entre -1 et 1.
   La texture récupérée par la carte graphique, est plaquée sur le maillage de la sphère et la hauteur du sommet
-  est déduit de l'interpolation des texels de la texture sur le maillage.
+  est déduite de l'interpolation des texels de la texture sur le maillage.
   %définir texel
   %définir interpolation ?
   
   
   \section{Système de rendu}
   Le programme est découpé en classes afin d'abstraire les appels à la bibliothèque OpenGL. La figure \ref{fig:uml_scene} représente le diagramme des classes qui forment l'abstraction principale du programme.
-  Les classes relative à la génération, l'affichage de la planète et l'utilisation du CDLOD sont strockées dans le dossier
+  Les classes relatives à la génération, l'affichage de la planète et l'utilisation du CDLOD sont strockés dans le dossier
   PlanetTech.
   
   \begin{figure}
@@ -32,13 +32,13 @@
   \label{fig:uml_scene}
   \end{figure}
 
-  La classe Scene est la classe centrale du programme, elle permet de
+  La classe Scene est la classe centrale du programme, elle permet
   d'initialiser et de créer la planète. Scene gère les paramètres
   principaux du programme à travers les entrées clavier d'InputManager.
   Ces paramètres sont le nombre de niveaux de détail, le mode d'affichage
   (texture + maillage, maillage uniquement, texture uniquement). Scene
   gère aussi l'affichage des informations comme le compteur d'images par
-  seconde ou le nombre de sommets actuellement affichés.
+  seconde ou le nombre de sommets actuellement affiché.
   
   La classe Planet représente la sphère à afficher. Ses classes filles
   spécialisent le type de planète à afficher, ce sont elles qui
@@ -54,19 +54,19 @@
  
   La figure \ref{fig:plan} représente le graphe simplifié de
   l'exécution du programme. L'étape d'initialisation se fait une seule
-  fois au début du programme, et les étape de mise à jour et d'affichage
-  se repètent tout le long de l'exécution.
+  fois au début du programme, et les étapes de mise à jour et d'affichage
+  se répètent tout le long de l'exécution.
   
   \section{Triangulator}
-  La classe Triangulator permet de générer le quadtree utilisé pour le système de niveau de détail.
-  Un objet Frustum est utilisé pour décider si un triangle un triangle de l'arbre est ou non dans le cône 
-  de vision de la caméra. Le diagramme de classe présenté en figure \ref{fig:plan} présente la classe
-  Triangulator. Les différents composant seront analysés plus loin dans le chapitre implémentation.
+  La classe Triangulator permet de générer le \emph{quadtree} utilisé pour le système de niveau de détail.
+  Un objet Frustum est utilisé pour décider si un triangle de l'arbre est ou non dans le cône 
+  de vision de la caméra. Le diagramme de classes présenté en figure \ref{fig:plan} présente la classe
+  Triangulator. Les différents composants seront analysés plus loin dans le chapitre implémentation.
   
   \section{Patch}
   La classe Patch permet de générer et d'afficher le maillage en y appliquant l'algorithme de morphing.
   Le morphing est ce qui permet d'avoir des transissions douces entre les différents niveaux de détails.
-  Les détails seront expliqué plus loin dans la partie implémentation.
+  Les détails seront expliqués plus loin dans la partie implémentation.
   
   
   \begin{figure}
@@ -79,8 +79,8 @@
   \section{Frustum}
   La classe Frustum permet de faire des opérations sur les triangles qui sont dans le cône de vision de la caméra. Le Frustum utilisé par la classe Triangulator pour permettre les tests d'union entre les triangles est le cône de vision. La classe Frustum permet aussi de décider si un triangle est à afficher ou non.\\
   
-  Cette classe permet entre autre d'éliminer les triangles qui ne sont pas visible de la caméra. Cette opération appelée \textit{culling} permet d'éviter d'envoyer des triangles inutiles à la carte graphique.
-  Dans ce cas ci, cela permet aussi d'éliminer ces triangles de l'arbre et donc d'optimiser sa génération.
+  Cette classe permet entre autres d'éliminer les triangles qui ne sont pas visibles de la caméra. Cette opération appelée \textit{culling} permet d'éviter d'envoyer des triangles inutiles à la carte graphique.
+  Dans ce cas ci,-cela permet aussi d'éliminer ces triangles de l'arbre et donc d'optimiser sa génération.
   
  \newpage %pour placer les images correctement
  
