--- a/documents/rapport/rapport/existant.tex
+++ b/documents/rapport/rapport/existant.tex
@@ -4,7 +4,7 @@
 
 \textbf{Inchangé}
 
-En vu de l'ampleur du projet, il est préférable de reprendre un projet
+En vue de l'ampleur du projet, il est préférable de reprendre un projet
 déjà existant et de l'étendre pour compléter nos besoins. Nous devons
 cependant respecter les contraintes du client. Notamment, le projet doit
 être écrit en C++ et visant Linux. Nous reviendrons plus en
@@ -14,14 +14,14 @@ nous intéresserons à la partie génération procédurale du terrain, puis
 nous regarderons la partie \emph{CDLOD}.\\
 
 La génération procédurale de terrain est très répandue pour obtenir des
-surfaces variées et de taille conséquentes sans avoir à les créer à la
+surfaces variées et de taille conséquente sans avoir à les créer à la
 main. De nombreux logiciels mettent en pratique ces méthodes, par
 exemple Terragen\footnote{\url{https://planetside.co.uk/}}, logiciel de
 création de mondes en 3D utilisé entre autres dans le monde du cinéma,
-ou encore des jeux vidéos comme par exemple Elite:
+ou encore des jeux vidéo comme par exemple Elite:
 Dangerous\footnote{\url{https://www.elitedangerous.com/}}. Les
-techniques employées dans ces logiciels sont souvent déjà disponible
-implémentée dans des bibliothèques, comme
+techniques employées dans ces logiciels sont souvent déjà disponibles
+implémentées dans des bibliothèques, comme
 libnoise\footnote{\url{http://libnoise.sourceforge.net/}} ou
 GLM\footnote{\url{https://glm.g-truc.net/0.9.8/index.html}}.\\
 
@@ -39,21 +39,21 @@ beaucoup trop de changements.
 
 Un autre candidat potentiel est le projet WorldGenerator de Leif
 Erkenbrach\footnote{\url{http://leifnode.com/} |
-\url{https://github.com/LeifNode/World-Generator}, dernier accès Mars 2018} sous licence MIT. Ce
+\url{https://github.com/LeifNode/World-Generator}, dernier accès: mars 2018} sous licence MIT. Ce
 projet permet de visualiser une planète en trois dimensions générée
 procéduralement. Implémenté en C++ et utilisant OpenGL 4.4, bibliothèque
 graphique disponible pour Linux. Cependant, le projet n'implémente pas
 l'algorithme complet de CDLOD, et nécessite d'être porté sous Linux.
 Nous avions décidé que ce projet était une base viable, et avons
-commencé à le porter sous Linux. Nous nous sommes rendus compte que le
+commencé à le porter sous Linux. Nous nous sommes rendu compte que le
 projet ne respectait pas correctement le standard OpenGL 4.5. Corriger
-ce problème nécessiterai de réécrire une bonne partie du pipeline
+ce problème nécessiterait de réécrire une bonne partie du pipeline
 graphique (processus de rendu graphique). Nous avons donc décidé de
 chercher une autre base.
 
 Enfin, une troisième base intéressante est le projet Planet Renderer de
 Robert
-Lindner\footnote{\url{https://github.com/Illation/PlanetRenderer}, dernier accès Mars 2018}. Ce
+Lindner\footnote{\url{https://github.com/Illation/PlanetRenderer}, dernier accès avril 2018}. Ce
 projet, sous licence MIT, affiche une planète en trois dimensions ainsi
 que son maillage. L'algorithme de CDLOD est respecté. Le projet est
 écrit en C++ et avec OpenGL 4.5. Il est prévu pour Linux et Windows.
